--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 }
 body {
     font-family: var(--fontfamily);
-     overflow-x: hidden;
+     /* overflow-x: hidden; */
     /* prevents vertical scroll from class website/MDN */
 }
 
